RESOLVED FIXED84279
Fix null-pointer dereference in ApplyPropertyZoom::applyValue().
https://bugs.webkit.org/show_bug.cgi?id=84279
Summary Fix null-pointer dereference in ApplyPropertyZoom::applyValue().
Luke Macpherson
Reported 2012-04-18 14:27:30 PDT
Fix null-pointer dereference in ApplyPropertyZoom::applyValue().
Attachments
Patch (3.38 KB, patch)
2012-04-18 14:29 PDT, Luke Macpherson
no flags
Luke Macpherson
Comment 1 2012-04-18 14:29:03 PDT
WebKit Review Bot
Comment 2 2012-04-19 15:00:27 PDT
Comment on attachment 137768 [details] Patch Clearing flags on attachment: 137768 Committed r114677: <http://trac.webkit.org/changeset/114677>
WebKit Review Bot
Comment 3 2012-04-19 15:00:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.