Fix null-pointer dereference in ApplyPropertyZoom::applyValue(). https://bugs.webkit.org/show_bug.cgi?id=84279

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/css/zoom-on-unattached.html

* css/CSSStyleApplyProperty.cpp:
(WebCore::ApplyPropertyZoom::applyValue):

LayoutTests:

* fast/css/zoom-on-unattached-expected.txt: Added.
* fast/css/zoom-on-unattached.html: Added.


Canonical link: https://commits.webkit.org/101876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114677 268f45cc-cd09-0410-ab3c-d52691b4dbfc